SR: made things fixed to the right side of the page scrollable and added white space to the bottom to be able to see more of it.

--- a/client/app/schedule.edit.assign/schedule.edit.assign.css
+++ b/client/app/schedule.edit.assign/schedule.edit.assign.css
@@ -51,3 +51,8 @@ a.list-group-item {
   display: inline;
   clear:none;
 }
+
+#fixedScroll{
+  height: 600px;
+  overflow: scroll;
+}
