--- a/client/app/schedule.input/schedule.input.css
+++ b/client/app/schedule.input/schedule.input.css
@@ -22,6 +22,9 @@
     position: fixed;
     top: 245px;
     width: 300px;
+    height: 600px;
+    overflow: scroll;
+    margin-bottom: 100 px;
 }
 
 /*.btn-default{
